--- a/curriculum.html
+++ b/curriculum.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<div class="grid-container">
+<div class="grid-container" style="height: 135vh">
   <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -64,8 +64,8 @@
             <div class="message">Message</div>
             </div>
           <div class="socialmedia">
-            <img class="instagram" src="instagram.png"/>
-            <img class="linkedin" src="linkedin.png" />
+            <a href="https://instagram.com" target="_blank"><img class="instagram" src="instagram.png" /></a>
+            <a href="https://linkedin.com" target="_blank"><img class="instagram" src="linkedin.png" /></a>
           </div>
         </div>
       </div>
