--- a/portfolio.html
+++ b/portfolio.html
@@ -57,8 +57,8 @@
             <div class="message">Message</div>
             </div>
           <div class="socialmedia">
-            <img class="instagram" src="instagram.png"/>
-            <img class="linkedin" src="linkedin.png" />
+            <a href="https://instagram.com" target="_blank"><img class="instagram" src="instagram.png" /></a>
+            <a href="https://linkedin.com" target="_blank"><img class="instagram" src="linkedin.png" /></a>
           </div>
         </div>
       </div>
